--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,7 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/durable-works-268314/superset', '.']
-  timeout: 7200s
+  timeout: 10m0s
+options:
+    machineType: 'N1_HIGHCPU_8'
+images: ['gcr.io/durable-works-268314/superset']
